--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "drizzle-orm": "^0.39.1",
     "firebase": "^11.3.0",
     "lucide-react": "^0.474.0",
+    "motion": "^12.4.2",
     "next": "15.1.6",
     "openai": "^4.83.0",
     "react": "^18.0.0",
